<resources>
    <string name="app_name">Actividad1Boris</string>

    <!--STRINGS GLOBALES -->
    <string name="bienvenida">Bienvenido..</string>
    <string name="pedirNombre">Por favor ayúdame a conocerte!</string>
    <string name="placeNombre">Ingresa tu nombre</string>
    <!--MENÚ GENERAL -->
    <string name="exponente">Exponencial</string>
    <string name="conversion">Conversión</string>
    <string name="areas">Área</string>
    <string name="raiz">Raíz</string>
    <string name="atras">Regresar</string>
    <string name="noticias">Noticias</string>
    <!--Exponentes -->
    <string name="titulo_Expo">Operaciones exponenciales</string>
    <string name="texto_Por_Defecto">2</string>
    <string name="place_base">Ingrese un número</string>
    <string name="titulo_exponente">Exponente</string>
    <string name="calcular">Calcular</string>
    <string name="titulo_numero_base">Número base</string>
    <string name="resultado_titulo">RESULTADO</string>
    <string name="resultado">....</string>
    <string name="operacion_text">Operación exitosa!</string>

    <!--Raiz -->
    <string name="titulo_raiz">Operación de raices</string>
    <string name="place_raiz">raíz</string>
    <string name="valor_raiz">número</string>

    <!--Noticias-->
    <string name="encabezado_noticias">Últimas novedades</string>
    <string name="subtitulo_noticias">Destacados</string>

</resources>