<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MenuGeneralActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetalle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/MenuGeneral"
        app:cardBackgroundColor="@color/detalle"
        app:cardCornerRadius="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtMensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_abajo"
                app:tint="@color/white"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/MenuGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDetalle"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <Button
            android:id="@+id/btnExponente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exponente"
            android:backgroundTint="@color/botones"/>
        <Button
            android:id="@+id/btnConversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conversion"
            android:backgroundTint="@color/botones"/>

        <Button
            android:id="@+id/btnRaices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raiz"
            android:backgroundTint="@color/botones"/>
        <Button
            android:id="@+id/btnNoticias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticias"
            android:backgroundTint="@color/botones"/>
        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atras"
            android:backgroundTint="@color/boton_atras"
            android:textColor="@color/textoBoton"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>