<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExponencialActivity"
    android:background="@color/back_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetalle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvNumeroBase"
        app:cardBackgroundColor="@color/detalle"
        app:cardCornerRadius="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/titulo_Expo"
                />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_expo"
                app:tint="@color/white"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNumeroBase"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDetalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvExponente"
        app:cardBackgroundColor="@color/detalle"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/titulo_numero_base"
                />

            <EditText
                android:id="@+id/edtNumeroBase"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/place_base"
                android:maxLines="1"
                android:textColor="@color/placeholder"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvExponente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/detalle"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvNumeroBase">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_exponente"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/txtExponente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/texto_Por_Defecto"
                android:textAllCaps="true"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/title_text" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rngExponente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="100"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/calcular"

            android:backgroundTint="@color/botones"/>
        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/atras"
            android:backgroundTint="@color/boton_atras"
            android:textColor="@color/textoBoton"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>