<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".RaizActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetalle"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ivSimbolo"
        app:cardBackgroundColor="@color/detalle"
        app:cardCornerRadius="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/titulo_raiz"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_rai"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edtNumRaiz"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/place_raiz"
        android:maxLines="1"
        android:textColor="@color/placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivSimbolo"
        />

    <ImageView
        android:id="@+id/ivSimbolo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_raiz"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"/>

    <EditText
        android:id="@+id/edtValor"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/valor_raiz"
        android:maxLines="1"
        android:textColor="@color/placeholder"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSimbolo"
        >
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/calcular"

            android:backgroundTint="@color/botones"/>
        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/atras"
            android:backgroundTint="@color/boton_atras"
            android:textColor="@color/textoBoton"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>