<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtBievenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida"
        app:layout_constraintBottom_toTopOf="@+id/txtInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedirNombre"
        app:layout_constraintBottom_toTopOf="@+id/edtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/placeNombre"
        android:maxLines="1"
        android:textColor="@color/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
        app:layout_constraintBottom_toTopOf="@+id/btnIniciar"

        />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar"
        app:layout_constraintBottom_toBottomOf="parent"
         />


</androidx.constraintlayout.widget.ConstraintLayout>